Fix width of top bar to align with bracket's padding

--- a/style.css
+++ b/style.css
@@ -279,7 +279,7 @@ body {
 }
 
 #top-bar {
-	width:1080px;
+	width:1100px;
 }
 
 #year-div {
